<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/main_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/toolbar" />
        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:id="@+id/login_fields_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/login_margin"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/transkribus_imageview"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/transkribus"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/username_edittext"
                android:layout_below="@id/transkribus_imageview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_below="@+id/username_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_below="@+id/password_edittext"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                app:backgroundTint="@color/colorAccent"
                android:textColor="@color/white"
                android:text="@string/login_button_text" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/login_loading_layout"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ProgressBar
                android:id="@+id/map_progressbar"
                android:layout_width="@dimen/login_spinner_size"
                android:layout_height="@dimen/login_spinner_size"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/map_progressbar"
                android:layout_centerHorizontal="true"
                android:text="@string/login_loading_text" />
        </RelativeLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>