...
    <string name="account_logout">Logout</string>
    <string name="settings_item_text">Settings</string>

    <!-- Navigation drawer alert messages: -->

    <!-- Strings used by multiple activities/dialogs -->
    <string name="dialog_ok_text">OK</string>
    <string name="dialog_no_text">No</string>
    <string name="dialog_yes_text">Yes</string>
    <string name="dialog_cancel_text">Cancel</string>

    <string name="dialog_btn_delete">Delete</string>
    <string name="dialog_btn_crop">Crop</string>
...
    <string name="settings_exif_artist_title">Photographer</string>
    <string name="settings_exif_artist_default_value"></string>
    <string name="settings_exif_copyright_title">Copyright</string>
    <string name="settings_exif_copyright_default_value"></string>
    <string name="settings_exif_none">None</string>

    <string name="document_default_name">Untitled document</string>

    <!-- ImageViewFragmentment -->
    <string name="page_slide_fragment_loading_text">Please wait while the page is detected</string>
    <string name="page_slide_fragment_retake_image_dialog_title">Retake image</string>
    <string name="page_slide_fragment_retake_image_dialog_text">This will replace the current image with a newly taken one. Do you want to proceed?</string>
    <string name="page_slide_fragment_retake_image_dialog_confirm_text">Retake</string>

    <!-- GalleryActivity -->
    <string name="gallery_menu_select_all_item_title">Select all items</string>
    <string name="gallery_selected">selected</string>
    <string name="gallery_menu_rotate_item_title">Rotate right</string>
    <string name="gallery_confirm_no_ocr_available_title">OCR not available</string>
    <string name="gallery_confirm_no_ocr_available_text">Sorry, we could not find Google Play services. Try to reinstall the app via Google Play store. Do you want to generate a PDF without OCR?</string>
    <string name="gallery_confirm_ocr_title">Make PDF machine readable?</string>
    <string name="gallery_confirm_ocr_text">This will apply OCR and make the text in the picture(s)
...
