...
        </com.google.android.material.appbar.AppBarLayout>

        <!--The following attributes are required for a footer, so the FAB is not overlapping:-->
        <!--android:paddingBottom="80dp"-->
        <!--android:clipToPadding="false"-->
        <ListView
            android:id="@+id/upload_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="multipleChoice"
            android:fadeScrollbars="false"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:paddingBottom="80dp"
...
