...
                    android:indeterminate="true"
                    style="?android:attr/progressBarStyle" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_centerInParent="true"
                android:id="@+id/photo_button"
                android:layout_width="@dimen/photo_button_size"
                android:layout_height="@dimen/photo_button_size"
                app:srcCompat="@drawable/ic_photo_camera_white_24dp"
                android:background="@drawable/photo_shoot_button_selector" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
...
